# windows-projfs

./: Cargo.toml  README.MD
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: main.rs
examples/reg-fs/: Cargo.toml
examples/reg-fs/src/: main.rs
examples/virtual-fs/: Cargo.toml
examples/virtual-fs/src/: main.rs
windows-projfs/: Cargo.toml
windows-projfs/src/: aligned_buffer.rs  callback_data.rs  error.rs  fs.rs  lib.rs  library.rs  source.rs  utils.rs
windows-projfs/tests/: directories.rs  file_content.rs
